Fix z-index

--- a/source/stylesheets/layout.sass
+++ b/source/stylesheets/layout.sass
@@ -55,7 +55,7 @@ body
         background: var(--background-color)
         display: block
         opacity: .5
-        z-index: 1
+        z-index: 11
         left: 0
         top: 0
 
